# web2qa

./: Dockerfile.api  README.md  docker-compose.yaml  pyproject.toml
web2qa/api/: __init__.py
web2qa/api/routers/: crawler.py  status.py
web2qa/crawler/: web.py
